tests/typing/good/testfile-subtype-2.c

struct S { int a; };
int main() {
  struct S *s;
  s = 0;
}
