tests/typing/bad/testfile-redef-4.c

struct S { int a; int a; };
int main() {}
